<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:background="@color/colorPrimaryDark"
    android:orientation="horizontal"
    android:padding="@dimen/dimen_5">

    <LinearLayout
        android:id="@+id/item_1"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.artlite.bslibrary.ui.view.BSImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_0"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:clickable="false"
            android:src="@drawable/ic_home_tab"
            app:tint="@android:color/white" />

        <com.artlite.bslibrary.ui.fonted.BSTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_home"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_15"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_2"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.artlite.bslibrary.ui.view.BSImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_0"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:clickable="false"
            android:src="@drawable/round_drafts_black_48dp"
            app:tint="@android:color/white" />

        <com.artlite.bslibrary.ui.fonted.BSTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/draft"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_15"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_3"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.artlite.bslibrary.ui.view.BSImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_0"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:clickable="false"
            android:src="@drawable/round_favorite_black_48dp"
            app:tint="@android:color/white" />

        <com.artlite.bslibrary.ui.fonted.BSTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_favourites"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_15"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_4"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.artlite.bslibrary.ui.view.BSImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_0"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/round_settings_black_48dp"
            app:tint="@android:color/white" />

        <com.artlite.bslibrary.ui.fonted.BSTextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_settings"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_15"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>